--- a/css/navigation.css
+++ b/css/navigation.css
@@ -39,7 +39,7 @@ nav .menu{
     bottom:0px;    
     left:50%;
     right:0;
-    margin-bottom:48px;
+    margin-bottom:4vh;
     transform:translateX(-50%);
 }
 nav ul{
